[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/BasicEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/PlaceholderSamurai.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null, null, null, null, null, null, null ],
"loop": true,
"name": "welk",
"speed": 5.0
}, {
"frames": [ null, null, null, null, null, null ],
"loop": true,
"name": "attak",
"speed": 12.0
}, {
"frames": [ null, null, null, null, null ],
"loop": false,
"name": "ded",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 80 )

[node name="BasicEnemy" type="RigidBody2D"]
position = Vector2( 510, -90 )
collision_layer = 2
collision_mask = 5
mode = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 20, -90 )
scale = Vector2( 0.342205, 0.32274 )
frames = SubResource( 1 )
animation = "attak"
frame = 3
playing = true

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 20, -10 )
rotation = 3.14159
shape = SubResource( 2 )
one_way_collision = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -40, -200 )
enabled = true
cast_to = Vector2( 0, 217 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 70, -200 )
enabled = true
cast_to = Vector2( 0, 217 )

[node name="WeakPoint" type="RayCast2D" parent="."]
position = Vector2( -50, -150 )
enabled = true
cast_to = Vector2( 0, 140 )
collide_with_areas = true

[node name="StrongPoint" type="RayCast2D" parent="."]
position = Vector2( 100, -160 )
enabled = true
cast_to = Vector2( 0, 150 )
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, -90 )
shape = SubResource( 3 )

[node name="AttackZoneF" type="RayCast2D" parent="."]
position = Vector2( 20, -90 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 300 )

[node name="AttackZoneB" type="RayCast2D" parent="."]
position = Vector2( 20, -90 )
rotation = 1.57079
cast_to = Vector2( 0, 300 )

[node name="EnragedTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished" binds= [ false ]]
